# usr

./: README.md
lib/QML/: actl.qml  deny-allow.qml  oneline-entry.qml  pass-prompt.qml  warn.qml
lib/bash/: td-completion.bash  yq-completion.bash
lib/emacs/: amkhlv-common.el  amkhlv-mailaliases2bbdb.el  amkhlv-md.el  amkhlv-nxml.el  amkhlv-org.el  amkhlv-pod.el  amkhlv-scribble.el  amkhlv-tex2scrbl.el  amkhlv.el  emacs.el
lib/emacs/elisp/: amkhlv-dired.el  amkhlv-html.el  amkhlv-pod2scrbl.el  amkhlv-scribble.el  amkhlv-tex.el  amkhlv.el  bystroTeX-preview.el
lib/perl/Pod/: Html.pm  Markdown.pm
lib/python/: amkhlv_calendar.py  amkhlv_gstream.py  amkhlv_mail.py  gu_msgr.py  linii.py  linii2.py
lib/python/tables/: addr.py
share/Arduino/hum/: Makefile  README.md  andrei.ino
share/Arduino/ind/: Makefile  andrei.ino
share/Arduino/nightlight/: Makefile  night.ino
share/Haskell/: README.md  cabal.project  foo.cabal  myscript.hs
share/Haskell/SVGCalendar/: README.md  flake.nix  package.yaml
share/Haskell/amail/: ChangeLog.md  README.md  package.yaml  stack.yaml
share/Haskell/amkbd/: README.md  amkbd.cabal  autokeys.sh  default.nix  flake.nix  keyboard-cleaner.sh  keysyms.txt  project.nix  result
share/Haskell/amkhlv-personal/: README.md  amkhlv-personal.cabal
share/Haskell/amkhlv-personal/src/: AmkhlvUtils.hs  NaiveSExp.hs
share/Haskell/amkhlv-personal/test/: Spec.hs  test.rkt
share/Haskell/amkhlv-readline/: CHANGELOG.md  LICENSE  README.md  amkhlv-readline.cabal  shell.nix
share/Haskell/amkhlv-tools/: ChangeLog.md  README.md  amkhlv-tools.cabal  package.yaml  stack.yaml
share/Haskell/amkhlv-utils/: ChangeLog.md  README.md  amkhlv-utils.cabal  package.yaml  stack.yaml
share/Haskell/cbmap/: cbmap.cabal  default.nix  flake.nix
share/Haskell/cbmap/app/: Main.hs
share/Haskell/depot/: LICENSE  README.md  depconf.yaml  deploy.sh  depot.cabal  stack.yaml
share/Haskell/depot/app/: Dispatch.hs  Foundation.hs  Main.hs  MakeHash.hs  Model.hs  SetupUserDB.hs
share/Haskell/depot/config/: routes
share/Haskell/depot/templates/: default-layout-wrapper.hamlet  default-layout.cassius  file-item.hamlet  login.hamlet  no-such-user.hamlet  upload.hamlet  wrong-password.hamlet
share/Haskell/events/: README.md  events.cabal  stack.yaml
share/Haskell/indicator/: README.md  indicator.cabal  indicator.rnc  indicator.rng  stack.yaml
share/Haskell/inkint/: CHANGELOG.md  LICENSE  backup.sh  default.nix  flake.nix  inkint.cabal
share/Haskell/lines-of/: README.md  build_doc.sh  config  example.css  example.xml  lines-of.cabal  shell.nix  stack.yaml
share/Haskell/lines-of/src/: Common.hs  GUI.hs  Main.hs  Monthly.hs
share/Haskell/lines-of/tables/: Example.hs
share/Haskell/lines-of/test/: Spec.hs
share/Haskell/linii/: Application.hs  README.md  deploy.sh  json2vcard.py  linii.cabal  package.yaml  vcard2dict.py
share/Haskell/littledata/: CHANGELOG.md  LICENSE  backup.sh  default.nix  flake.nix  hie.yaml  littledata.cabal
share/Haskell/littledata/app/: Main.hs
share/Haskell/littledata/example-config/: littledata.css
share/Haskell/md2html/: README.md  md2html.cabal  stack.yaml
share/Haskell/md2html/src/: Main.hs
share/Haskell/meds/: ChangeLog.md  README.md  medicines.rnc  package.yaml  stack.yaml
share/Haskell/parse/: ChangeLog.md  README.md  install.sh  package.yaml
share/Haskell/seacat/: README.md  seacat.cabal
share/Haskell/secrets/: ChangeLog.md  README.md  example.xml  package.yaml  stack.yaml  xvkbd-helper.sh
share/Haskell/td/: LICENSE  README.md  stack.yaml  td.cabal
share/Haskell/td/schemas/: td.hs.rng  todolist.rng
share/Haskell/td/src/: Main.hs
share/Haskell/websoup/: ChangeLog.md  README.md  package.yaml  stack.yaml
share/Haskell/wint/: README.md  stack.yaml  wint.cabal
share/Nix/ioqml/: builder.sh  default.nix
share/Nix/pdq/: builder.sh  default.nix
share/Node.js/: general.md  useful-packages.md
share/Node.js/anode/: main.js  package.json
share/Node/amkhlv-utils/: README.md  hashPassword.ts  index.js  index.ts  (+2 more)
share/Nu/: svg-size-down.nu
share/Python/: html2pdf.py  requirements.txt  shell.nix
share/Racket/: eqn-number.rkt  json-to-ncl.rkt  read-example.rkt
share/Rust/: shell.nix
share/Rust/a/: Cargo.toml  README.md  default.nix
share/Rust/a/src/: main.rs
share/Rust/amail/: Cargo.toml  README.md  psql-setup.sql  target
share/Rust/amail/src/: amail.rs
share/Rust/gitsync/: Cargo.toml
share/Rust/gitsync/src/: main.rs
share/Rust/gtk-line-entry/: Cargo.toml  README.html  README.md  default.nix
share/Rust/gtk-line-entry/config-example/: id.yaml  xdg-open.yaml
share/Rust/gtk-line-entry/src/: main.rs
share/Rust/little-data/: Cargo.toml  target
share/Rust/little-data/src/: data.rs
share/Rust/rem/: Cargo.toml  README.md  backup.sh
share/Rust/rem/src/: lib.rs  lst.rs  rem.rs
share/Rust/secrets/: Cargo.toml  default.nix  env.nix
share/Rust/secrets/src/: main.rs
share/Rust/svg-show/: Cargo.toml  default.nix
share/Rust/svg-show/src/: main.rs
share/Rust/things/: Cargo.toml  default.nix  flake.nix
share/Rust/things/src/: main.rs
share/Rust/ttt/: Cargo.toml  build-static.sh
share/Rust/ttt/src/: main.rs
share/Rust/utils/: Cargo.toml  README.md  build.sh  default.nix  install.sh  make-backup.sh  result
share/Rust/utils/src/: docx.rs  emacs-inter.rs  lib.rs  mailaliases.rs  psql.rs  svg.rs  wkhtml2pdf.rs
share/gstreamer/: flake.nix  result
share/keys/: gh_rsa.pub
share/linii2/: linii2.css
share/notes/: applications-built-from-source.md  check-links.p6  markdown.md  unicode.txt
share/sbt/: README.html  README.md
share/scribble/: REGISTRY.yaml  amkhlv.scrbl  build.rkt  bystrotex.xml  cleanup.rkt
share/setup/: adjust_home-links.sh  setup-ipset.sh  setup-racket-and-scribble.sh  xfce4-config.sh
share/virtualbox/: fromsel  noecho  tosel
stow/: link-home.sh
stow/shell/: .XCompose  .Xdefaults  .amkhlv  .andrei  .bash_profile  .bashrc  .gtkrc-2.0  .gtkrc-2.0.mine  .mailcap  .monthlyrc  .profile  .screenrc  .tdplrc  .tmux.conf  .tzlist  .vimperatorrc  .vimrc  .xbindkeysrc
(+738 files in other folders)
