name:                amkhlv-personal
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/amkhlv-personal#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  hs-source-dirs:      src
  exposed-modules:     NaiveSExp
                       , AmkhlvUtils
  build-depends:       base >= 4.7 && < 5
                       , parsec
                       , directory
                       , optparse-applicative
                       , process
                       , text
  default-language:    Haskell2010



test-suite myparser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  build-depends:       base
                       ,parsec
  default-language:    Haskell2010
