cabal-version:      3.0
name:               cbmap
version:            0.1.0.0
build-type:         Simple

executable cbmap
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: GHC2021
  default-extensions:
    OverloadedLabels
    OverloadedStrings
  ghc-options:
    -Wall
  build-depends:
    base >=4.19 && <4.22,
    haskell-gi-base,
    gi-gio,
    gi-gtk,
    process,
    text
