name:                lines-of
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lines-of#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lines-of
  hs-source-dirs:      src
  ghc-options:         -main-is Main
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, sqlite-simple, text, gtk3, process, optparse-applicative, hxt

executable lines-of-bancas
  hs-source-dirs:      src, /home/andrei/.config/amkhlv/lines-of
  ghc-options:         -main-is Bancas
  main-is:             Bancas.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, sqlite-simple, text, gtk3, process

executable lines-of-congressos
  hs-source-dirs:      src, /home/andrei/.config/amkhlv/lines-of
  ghc-options:         -main-is Congressos
  main-is:             Congressos.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, sqlite-simple, text, gtk3, process

executable lines-of-seminarios
  hs-source-dirs:      src, /home/andrei/.config/amkhlv/lines-of
  ghc-options:         -main-is Seminarios
  main-is:             Seminarios.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, sqlite-simple, text, gtk3, process

executable lines-of-example
  hs-source-dirs:      src, tables
  ghc-options:         -main-is Example
  main-is:             Example.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, sqlite-simple, text, gtk3, process

executable lines-of-monthly
  hs-source-dirs:      src, /home/andrei/.config/amkhlv/lines-of
  ghc-options:         -main-is Regevents
  main-is:             Regevents.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, sqlite-simple, text, gtk3, process

executable monthly
  hs-source-dirs:      src
  ghc-options:         -main-is Monthly
  main-is:             Monthly.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, sqlite-simple, text, gtk3, time, split, process

test-suite mytest
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  default-language:    Haskell2010
  hs-source-dirs:      test, src, tables
  build-depends:       base >= 4.7 && < 5
                       , sqlite-simple
                       , text
                       , QuickCheck
                       , hspec
                       , gtk3
