cabal-version:      3.0
name:               littledata
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrei Mikhailov
maintainer:         amkhlv@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable littledata
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        text,
        directory,
        data-default,
        haskell-gi-base,
        gi-gtk4,
        gi-gdk4,
        gi-gio,
        gi-gobject,
        gi-glib,
        optparse-applicative,
        vector,
        json,
        process,
        containers,
        sort
    hs-source-dirs:   app
    default-language: Haskell2010
