name:                td
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/td#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable td
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , hxt
                     , hxt-relaxng
                     , text
                     , ansi-terminal
                     , containers
                     , directory
                     , process
                     , time
                     , iso8601-time
                     , gtk
                     , transformers
