[package]
name = "amail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "amail"
path = "src/amail.rs"

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
clap_complete = "3.0.5"
home = "0.5.3"
regex = "1.5.4"
serde = "1.0.132"
serde_json = "1.0.91"
dirs = "1.0.5"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.7"
postgres-types = { version = "0.2.4", features = ["derive"] }
json = "0.12.4"
mail-parser = "0.8.0"
glob = "0.3.1"
chrono = "0.4.23"
