[package]
name = "gitsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="amkhlv-git"
path="src/main.rs"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["termion-backend"]
regex = "1.10.4"
tokio = { version = "1", features = ["full"] }
