[package]
name = "gtk-line-entry"
version = "0.1.0"
authors = ["Andrei Mikhailov <amkhlv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.2"
glib = "0.10.3"
gio = "0.9.1"
clap = "2.33.3"
dirs = "1.0.5"
yaml-rust = "0.4"
shellexpand = "2.1"
gdk = "0.13.2"
gdk-sys = "0.10.0"

