[package]
name = "little-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "amkhlv-data"
path = "src/data.rs"

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
clap_complete = "3.0.5"
home = "0.5.3"
dirs = "1.0.5"
gtk = "0.16.2"
glib = "0.16.7"
gdk = "0.16.2"
gio = "0.16.7"
gdk-sys = "0.16.0"
serde_yaml = "0.9.16"
serde_json = "1.0.91"
serde_dhall = "0.12.0"