[package]
name = "rem"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rem"
path = "src/rem.rs"

[lib]
name = "listserv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
dirs = "1.0.5"
serde = "1.0.132"
serde_dhall = "0.12.1"
openssl = "0.10.42"
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
tokio-postgres-rustls = "0.9.0"
tokio-postgres = "0.7.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["termion-backend"]

