[package]
name = "secrets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.5"
clap = { version = "3.0.13", features = ["derive"] }
clap_complete = "3.0.5"
xmltree = "0.10.3"
tokio-postgres = "0.7.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"
unix-named-pipe = "0.2.0"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["termion-backend"]

