[package]
name = "svg-show"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.1", package = "gtk4", features = ["v4_8"] }
gio = "0.18.1"
gdk4 = "0.7.1"
clap = { version = "3.0.13", features = ["derive"] }
home = "0.5.5"
gdk-pixbuf = "0.18.0"
notify = "6.1.1"