[package]
name = "ttt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "1.0.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"
chrono = "0.4.35"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["termion-backend"]

