[package]
name = "utils"
version = "0.1.0"
authors = ["Andrei Mikhailov <amkhlv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "amkhlv-wkhtml2pdf"
# path = "src/wkhtml2pdf.rs"
# 
[[bin]]
name = "amkhlv-svg"
path = "src/svg.rs"

[[bin]]
name = "amkhlv-emacs-inter"
path = "src/emacs-inter.rs"

[[bin]]
name = "amkhlv-psql"
path = "src/psql.rs"

[[bin]]
name = "amkhlv-docx"
path = "src/docx.rs"


[lib]
name = "amkhlv"


[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
clap_complete = "3.0.5"
home = "0.5.3"
regex = "1.5.4"
serde = "1.0.132"
serde_dhall = "0.12.1"
serde_json = "1.0.91"
dirs = "5.0.1"
# postgres = "0.19.2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.7"
postgres-types = { version = "0.2.4", features = ["derive"] }
json = "0.12.4"
glob = "0.3.1"
chrono = "0.4.23"
docx-rs = "0.4.6"
steel-core = { git = "https://github.com/mattwparas/steel" }
markdown = "0.3.0"
homedir = "0.3.3"
